--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,15 +11,22 @@ The <span> within the <nav> has Bungee as it's default font-family
 The inner content should not be touching the viewport edge on any side and should remain 1.5ems away from all edges
   */
 
+  @keyframes example {
+    from {background-color: red;}
+    to {background-color: yellow;}
+  }
+
 .navlinks {
+  
   font-family: 'Source Sans Pro';
-  color: #FFFFFF; 
+  color: white;
   float: right;
   
   
 }
 
 nav {
+  
   width: 100%;
   height: 120px;
   font-family: 'Bungee', cursive;
@@ -31,3 +38,16 @@ nav {
   z-index: auto;
   position: fixed;
 }
+
+button {
+  color: white;
+  border: none;
+  float: right;
+  background-color: inherit;
+}
+
+nav span {
+  color: white;
+}
+
+/* // button */
