--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,17 +25,17 @@ The inner content should not be touching the viewport edge on any side and shoul
   
 }
 
-nav {
-  
+nav { 
   width: 100%;
   height: 120px;
   font-family: 'Bungee', cursive;
   color: #FFFFFF; 
   padding-right: 1em;
-  padding-left: 1.5em;
-  padding-top: 2em;
+  padding-left: 1em;
+  padding-top: 1em;
   background-color: #4056A1;
-  z-index: auto;
+  z-index: 1;
+  top:0;
   position: fixed;
 }
 
