--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,12 @@
+.new-tweet{
+  margin-top: 120px;
+}
+
+@media only screen and (max-width: 734px){
+.new-tweet{
+    margin-top: 60px;
+}
+}
 .redText {
   color: crimson;
 }
@@ -24,9 +33,6 @@
 .new-tweet  input.value {
   padding-left: 5em;
   
-}
-
-.new-tweet span.counter {
 }
 
 form {
